--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -7,7 +7,9 @@ http://yuilibrary.com/license/
 
 html {
   color: #000;
-  background: #FFF
+  background: #FFF;
+  /* fastclick */
+  touch-action: none;
 }
 
 body,
